fix alignment to photos next to projects section

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,14 +94,14 @@ h2 {
 }
 
 #friends {
-  margin: 20px;
-  margin-top: 150px;
+  margin: 10px;
+  margin-top: 10px;
   float: right;
 }
 
 #family {
-  margin: 20px;
-  margin-top: 40px;
+  margin: 10px;
+  margin-top: 10px;
   float: right;
 }
 
